--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "url": "git@github.com:pofider/html-to-xlsx.git"
   },
   "dependencies": {
+    "in-publish": "2.0.0",
+    "msexcel-builder-extended": "0.0.2",
     "phantom-workers": "0.3.1",
     "phantomjs": "1.9.15",
-    "msexcel-builder-extended": "0.0.2",
     "uuid": "2.0.1"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
   },
   "scripts": {
     "test": "node lib/prepareScripts.js && mocha test/test.js",
-    "postinstall": "node lib/prepareScripts.js"
+    "prepublish": "in-publish && node lib/prepareScripts.js || not-in-publish"
   },
   "main": "index.js",
   "license": "MIT"
