Add postinstall for testing without publishing

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "scripts": {
     "test": "node lib/prepareScripts.js && mocha test/test.js",
-    "prepublish": "in-publish && node lib/prepareScripts.js || not-in-publish"
+    "prepublish": "in-publish && node lib/prepareScripts.js || not-in-publish",
+    "postinstall": "node lib/prepareScripts.js"
   },
   "main": "index.js",
   "license": "MIT"
