add implementation that uses better-xlsx for xlsx generation
- old implementation is not removed and can be used too
- cells now support data types
- new implementation supports specifying a custom fontFamily

--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     }
   },
   "dependencies": {
+    "better-xlsx": "0.7.3",
+    "moment": "2.22.1",
     "msexcel-builder-extended": "0.0.8",
+    "tinycolor2": "1.4.1",
     "uuid": "3.2.1"
   },
   "devDependencies": {
