--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     }
   },
   "dependencies": {
-    "exceljs": "3.5.0",
+    "exceljs": "github:jsreport/exceljs",
     "moment": "2.22.1",
     "p-each-series": "2.1.0",
     "tinycolor2": "1.4.1",
