--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
-    "chrome-page-eval": "1.2.0",
+    "chrome-page-eval": "github:bjrmatos/chrome-page-eval",
     "eslint": "4.18.2",
     "eslint-plugin-babel": "4.1.2",
     "mocha": "5.0.2",
