--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
     }
   },
   "dependencies": {
-    "exceljs": "github:jsreport/exceljs",
+    "jsreport-exceljs": "3.7.0",
     "moment": "2.22.1",
     "tinycolor2": "1.4.1",
     "uuid": "3.2.1"
   },
   "devDependencies": {
     "babel-eslint": "8.2.2",
-    "chrome-page-eval": "github:bjrmatos/chrome-page-eval",
+    "chrome-page-eval": "1.3.0",
     "eslint": "4.18.2",
     "eslint-plugin-babel": "4.1.2",
     "mocha": "5.0.2",
     "phantom-page-eval": "1.2.0",
     "phantomjs": "1.9.17",
-    "puppeteer": "1.13.0",
+    "puppeteer": "2.1.1",
     "should": "13.2.1",
     "standard": "11.0.0",
     "xlsx": "0.12.4"
