--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
   "name": "html-to-xlsx",
   "version": "2.0.3",
-  "author": {
-    "name": "Jan Blaha",
-    "email": "jan.blaha@hotmail.com"
-  },
-  "contributors": [
-    "BJR Matos <bjrmatos@gmail.com> (https://github.com/bjrmatos)"
-  ],
   "description": "Convert html to xlsx",
   "keywords": [
     "html",
@@ -20,37 +13,43 @@
     "url": "git@github.com:pofider/html-to-xlsx.git"
   },
   "license": "MIT",
+  "author": {
+    "name": "Jan Blaha",
+    "email": "jan.blaha@hotmail.com"
+  },
+  "contributors": [
+    "BJR Matos <bjrmatos@gmail.com> (https://github.com/bjrmatos)"
+  ],
   "main": "index.js",
+  "scripts": {
+    "test": "mocha --timeout 15000 test/test.js && standard"
+  },
+  "dependencies": {
+    "jsreport-exceljs": "github:jsreport/exceljs",
+    "moment": "2.29.1",
+    "tinycolor2": "1.4.1",
+    "uuid": "8.3.2"
+  },
+  "devDependencies": {
+    "chrome-page-eval": "1.3.0",
+    "phantom-page-eval": "1.2.0",
+    "phantomjs": "2.1.7",
+    "mocha": "5.0.2",
+    "puppeteer": "9.1.1",
+    "should": "13.2.1",
+    "standard": "16.0.3",
+    "xlsx": "0.12.4"
+  },
   "engines": {
     "node": ">=8.9"
   },
   "standard": {
-    "parser": "babel-eslint",
     "env": {
       "node": true,
       "mocha": true
-    }
-  },
-  "dependencies": {
-    "jsreport-exceljs": "3.7.1",
-    "moment": "2.22.1",
-    "tinycolor2": "1.4.1",
-    "uuid": "3.2.1"
-  },
-  "devDependencies": {
-    "babel-eslint": "8.2.2",
-    "chrome-page-eval": "1.3.0",
-    "eslint": "4.18.2",
-    "eslint-plugin-babel": "4.1.2",
-    "mocha": "5.0.2",
-    "phantom-page-eval": "1.2.0",
-    "phantomjs": "1.9.17",
-    "puppeteer": "2.1.1",
-    "should": "13.2.1",
-    "standard": "11.0.0",
-    "xlsx": "0.12.4"
-  },
-  "scripts": {
-    "test": "mocha --timeout 15000 test/test.js && standard"
+    },
+    "ignore": [
+      "lib/scripts/conversionScript.js"
+    ]
   }
 }
