--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "test": "mocha --timeout 15000 test/test.js && standard"
   },
   "dependencies": {
-    "jsreport-exceljs": "3.8.0",
-    "moment": "2.29.3",
+    "jsreport-exceljs": "3.8.1",
+    "moment": "2.29.4",
     "tinycolor2": "1.4.2",
     "uuid": "8.3.2"
   },
   "devDependencies": {
     "chrome-page-eval": "1.3.0",
     "mocha": "10.0.0",
-    "phantom-page-eval": "2.0.0",
+    "phantom-page-eval": "2.0.1",
     "phantomjs": "2.1.7",
     "puppeteer": "9.1.1",
     "should": "13.2.3",
@@ -44,7 +44,10 @@
     "node": ">=8.9"
   },
   "standard": {
-    "env": ["node", "mocha"],
+    "env": [
+      "node",
+      "mocha"
+    ],
     "ignore": [
       "lib/scripts/conversionScript.js"
     ]
